2007-06-24  Paolo Borelli  <pborelli@katamail.com>

	* Makefile.am: remove m4 from EXTRA_DIST. It's not needed.
	Fixes bug #445877, noticed by Vincent Geddes.

2007-06-24  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-print-job-preview.c: do not stop emission of
	key press event, so that ctrl+p also works in print preview.
	Fixes bug #444611.

2007-06-17  Paolo Maggi  <paolo@gnome.org>

	Fixes weird focus behavior in the search/replace dialog
	
	* gedit/dialogs/gedit-search-dialog.c
	(gedit_search_dialog_present_with_time): new function
	(gedit_search_dialog_focus_in_event): removed
	(gedit_search_dialog_class_init): don't use 
	gedit_search_dialog_focus_in_event
	
	* gedit/dialogs/gedit-search-dialog.h: added prototype of
	gedit_search_dialog_present_with_time
	
	* gedit/gedit-commands-search.c (_gedit_cmd_search_find),
	(_gedit_cmd_search_replace): call gedit_search_dialog_present_with_time
	instead if gtk_window_present

2007-06-13  Steve Frécinaux  <code@istique.net>

	* configure.ac:
	* data/gedit.pc:
	* data/Makefile.am:
	* gedit/Makefile.am:

	Rename GEDIT_MAJOR into GEDIT_API_VERSION, because the former is
	confusing (see bug #447043).

2007-06-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document.c: make sure to not place the cursor
	in an invalid position when persisting the position from
	metadata.

2007-06-07  Bastien Nocera  <hadess@hadess.net>

	* gedit/gedit-metadata-manager.c:
	(gedit_metadata_manager_arm_timeout),
	(gedit_metadata_manager_save):
	Remove bits of evince left-overs, should fix #444921

2007-06-05  Bastien Nocera  <hadess@hadess.net>

	* gedit/gedit-metadata-manager.c:
	(gedit_metadata_manager_arm_timeout),
	(gedit_metadata_manager_init), (gedit_metadata_manager_shutdown),
	(gedit_metadata_manager_set), (gedit_metadata_manager_save):
	Avoid having an always-running timeout, uses power (Closes: #444270)

2007-05-12  Steve Frécinaux  <code@istique.net>
