@@ -1,5 +1,12 @@
 2007-06-24  Paolo Borelli  <pborelli@katamail.com>
 
+	* plugins/snippets/SnippetPluginInstance.py: remove 
+	useless import gtksourceview.
+
+	* plugins/spell/gedit-automatic-spell-checker.c: cleanup.
+
+2007-06-24  Paolo Borelli  <pborelli@katamail.com>
+
 	* Makefile.am: remove m4 from EXTRA_DIST. It's not needed.
 	Fixes bug #445877, noticed by Vincent Geddes.
 
